--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: google_fonts_arabic
 description: Arabic fonts by google right into your flutter application.
-version: 0.0.3
+version: 0.0.4
 author: Emad O. Medher
 homepage: emad@medher.info
 
@@ -56,8 +56,11 @@ flutter:
     - family: Amiri
       fonts:
         - asset: lib/fonts/Amiri/Amiri-Bold.ttf
+          style: bold
         - asset: lib/fonts/Amiri/Amiri-BoldItalic.ttf
+          style: BoldItalic
         - asset: lib/fonts/Amiri/Amiri-Italic.ttf
+          style: Italic
         - asset: lib/fonts/Amiri/Amiri-Regular.ttf
     - family: Aref_Ruqaa
       fonts:
