--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: google_fonts_arabic
 description: Arabic fonts by google right into your flutter application.
-version: 0.0.10
-author: Emad O. Medher
-homepage: emad@medher.info
+version: 0.0.12
+author: Emad O. Medher <emad@medher.info>"
+homepage: emad.medher.info
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
